--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,13 @@
   </li>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
+
+
   </li>
 </ul>
+
+<button class="btn btn-warning btn-sm" (click)="login()" >
+    Login
+</button>
 
 <router-outlet></router-outlet>
