--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -7,21 +7,22 @@
         <li class="nav-item">
           <a class="nav-link"
             routerLink="/">
-            Home
+            Inicio
           </a>
         </li>
   
         <li class="nav-item">
-          <a class="nav-link">
-            Sign in
+          <a class="nav-link"
+            routerLink="/login">
+            Ingreso al Sistema
           </a>
         </li>
   
-        <li class="nav-item">
+        <!--li class="nav-item">
           <a class="nav-link">
             Sign up
           </a>
-        </li>
+        </li-->
   
       </ul>
   
