--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -1,51 +1,47 @@
-<form>
-<!-- Card -->
-<div class="card">
 
-        <!-- Card body -->
-        <div class="card-body">
-      
-          <!-- Material form register -->
-          <form>
-            <p class="h4 text-center py-4">Sign up</p>
-      
-            <!-- Material input text -->
-            <div class="md-form">
-              <i class="fa fa-user prefix grey-text"></i>
-              <input type="text" id="materialFormCardNameEx" class="form-control">
-              <label for="materialFormCardNameEx" class="font-weight-light">Your name</label>
-            </div>
-      
-            <!-- Material input email -->
-            <div class="md-form">
-              <i class="fa fa-envelope prefix grey-text"></i>
-              <input type="email" id="materialFormCardEmailEx" class="form-control">
-              <label for="materialFormCardEmailEx" class="font-weight-light">Your email</label>
-            </div>
-      
-            <!-- Material input email -->
-            <div class="md-form">
-              <i class="fa fa-exclamation-triangle prefix grey-text"></i>
-              <input type="email" id="materialFormCardConfirmEx" class="form-control">
-              <label for="materialFormCardConfirmEx" class="font-weight-light">Confirm your email</label>
-            </div>
-      
-            <!-- Material input password -->
-            <div class="md-form">
-              <i class="fa fa-lock prefix grey-text"></i>
-              <!--input type="password" id="materialFormCardPasswordEx" class="form-control"-->
-              <input type="password" pPassword />
-              <label for="materialFormCardPasswordEx" class="font-weight-light">Your password</label>
-            </div>
-      
-            <div class="text-center py-4 mt-3">
-              <button class="btn btn-cyan" type="submit">Register</button>
-            </div>
-          </form>
-          <!-- Material form register -->
-      
-        </div>
-        <!-- Card body -->
-      
-      </div>
-</form>      
+
+<!-- >p-card header="Autenticar" [style]="{width: '360px'}">      
+  <form>
+    <p class="h4 text-center py-4">Autenticar</p>
+
+    <div class="input-group mb-3 md-form">
+      <span class="ui-float-label">
+          
+          <input id="float-input" type="text" size="30" pInputText> 
+          <label for="float-input">Nombre de usuario:</label>
+          <i class="pi pi-user" style="font-size: 2em"></i>
+      </span>
+    </div>
+
+
+    <div class="input-group mb-3 md-form">
+      <span class="ui-float-label">
+        <input pPassword type="password" pPassword size="30"/>
+        <label for="float-input">Password:</label>
+      </span>
+    </div>
+
+    
+    <button pButton  type="submit" label="Success" class="ui-button-rounded ui-button-success"></button>      
+    
+    
+  </form>
+</p-card-->
+ 
+<form>
+  <div class="input-group">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+    <input id="email" type="text" class="form-control" name="email" placeholder="Email">
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+    <input id="password" type="password" class="form-control" name="password" placeholder="Password">
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon">Text</span>
+    <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+  </div>
+</form>
+
+    
+
