--- a/src/app/security/login.component.html
+++ b/src/app/security/login.component.html
@@ -56,6 +56,8 @@
 					</div>
 					<div class="form-group col text-center">
 						<button pButton type="button" (click)="login()" label="Ingresar" class="ui-button-rounded ui-button-success"></button>
+						<button pButton type="button" (click)="showmsg()" label="Show msg" class="ui-button-rounded ui-button-success">
+								</button>
 					</div>
 				</form>
 			</div>
