--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -18,6 +18,10 @@
           </a>
         </li>
 
+        <li>
+           Usuario: {{authService.currentUser.value | async}}
+        </li>  
+
         <!--li class="nav-item">
           <a class="nav-link">
             Sign up
