--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -1,5 +1,14 @@
+<p-sidebar [(visible)]="display">
+    <p-panelMenu [model]="items" ></p-panelMenu>
+</p-sidebar>
+
+<button type="text" (click)="display = true" 
+  pButton icon="fa fa-bars" label="Menu"></button>      
+
 <nav class="navbar navbar-light">
+  
     <div class="container">
+
       <a class="navbar-brand" routerLink="/">Escuela</a>
   
       <ul class="nav navbar-nav pull-xs-right">
@@ -19,7 +28,7 @@
         </li>
 
         <li>
-           Usuario: {{authService.currentUser.value | async}}
+           Usuario: {{username$ | async}}
         </li>  
 
         <!--li class="nav-item">
