--- a/src/app/security/login.component.html
+++ b/src/app/security/login.component.html
@@ -27,6 +27,7 @@
     
   </form>
 </p-card-->
+
 <form #form="ngForm">
  
 <div class="container">
@@ -56,8 +57,8 @@
 					</div>
 					<div class="form-group col text-center">
 						<button pButton type="button" (click)="login()" label="Ingresar" class="ui-button-rounded ui-button-success"></button>
-						<button pButton type="button" (click)="showmsg()" label="Show msg" class="ui-button-rounded ui-button-success">
-								</button>
+						<!--button pButton type="button" (click)="showmsg()" label="Show msg" class="ui-button-rounded ui-button-success">
+								</button -->
 					</div>
 				</form>
 			</div>
