--- a/src/app/shared/layout/footer.component.html
+++ b/src/app/shared/layout/footer.component.html
@@ -1,10 +1,9 @@
 <footer>
     <div class="container">
-      <a class="logo-font" routerLink="/">Escuela</a>
+      <a class="logo-font" routerLink="/">Escuela Pedro de Mendoza</a>
       <span class="attribution">
         &copy; {{ today | date: 'yyyy' }}.
-        An interactive learning project from <a href="https://thinkster.io">Thinkster</a>.
-        Code licensed under MIT.
+        Gestión Educativa.
       </span>
     </div>
   </footer>
