--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,8 @@
 
     <div class="banner">
       <div class="container">
-        <h1 class="logo-font">Escuela</h1>
-        <p>A place to share your <i>Angular</i> knowledge.</p>
+        <h1 class="logo-font">Bienvenidos</h1>
+        
       </div>
     </div>
   
