--- a/src/app/security/login.component.html
+++ b/src/app/security/login.component.html
@@ -33,11 +33,8 @@
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
-			<div class="banner col text-center">
-				<h3>Ingresar</h3>
 
-			</div>
-			<div class="card-body">
+			<p-panel header="Ingreso al sistema">
 				<form>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
@@ -61,7 +58,7 @@
 								</button -->
 					</div>
 				</form>
-			</div>
+			</p-panel>	
 			<div class="card-footer">
 
 				<div class="d-flex justify-content-center">
