--- a/src/app/security/change.password.component.html
+++ b/src/app/security/change.password.component.html
@@ -1,2 +1,59 @@
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
 
+<form [formGroup]="changePassForm" (ngSubmit)="onSubmit(changePassForm.value)">
+<p-panel header="Cambiar Contraseña">
+        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-2">
+                    Contraseña Anterior *:
+                </div>
+            </div>
+            <div class="ui-grid-row">    
+                <div class="ui-grid-col-6">
+                    <input pPassword type="password" formControlName="passwordAnterior" placeholder="Requerido"/>
+                </div>
+                <div class="ui-grid-col-4">
+                    <p-message severity="error" text="Ingrese su contraseña anterior" *ngIf="!changePassForm.controls['passwordAnterior'].valid&&changePassForm.controls['passwordAnterior'].dirty"></p-message>
+                </div>
+            </div>
+            <div class="ui-grid-row">
+                    <div class="ui-grid-col-2">
+                        Nueva Contraseña *:
+                    </div>
+            </div>
+        
+            <div class="ui-grid-row">        
+                    <div class="ui-grid-col-6">
+                        <input pPassword type="password" formControlName="password" placeholder="Requerido"/>
+                    </div>
+                    <div class="ui-grid-col-4">
+                        <p-message severity="error" text="Ingrese Nueva Contraseña" *ngIf="!changePassForm.controls['password'].valid&&changePassForm.controls['password'].dirty"></p-message>
+                    </div>
+                </div>            
+            </div>
+            <div class="ui-grid-row">
+                    <div class="ui-grid-col-2">
+                        Repita Nueva Contraseña *:
+                    </div>
+            </div>     
+            <div class="ui-grid-row">        
+                    <div class="ui-grid-col-6">
+                        <input pPassword type="password" formControlName="confirmPassword" placeholder="Requerido"/>
+                    </div>
+                    <div class="ui-grid-col-4">
+                        <p-message severity="error" text="Repita Nueva Contraseña" *ngIf="!changePassForm.controls['confirmPassword'].valid&&changePassForm.controls['confirmPassword'].dirty"></p-message>
+                    </div>
+                           
+            </div>  
+        
+
+        <div class="ui-grid-row">
+                <div class="ui-grid-col-2"></div>
+                <div class="ui-grid-col-6">
+                    <button pButton type="submit" label="Confirmar" [disabled]="!changePassForm.valid"></button>
+                </div>
+                <div class="ui-grid-col-4"></div>
+        </div>  
+    
+</p-panel>      
+</form>      
