--- a/src/app/security/change.password.component.html
+++ b/src/app/security/change.password.component.html
@@ -13,7 +13,12 @@
                     <input pPassword type="password" formControlName="passwordAnterior" placeholder="Requerido"/>
                 </div>
                 <div class="ui-grid-col-4">
-                    <p-message severity="error" text="Ingrese su contraseña anterior" *ngIf="!changePassForm.controls['passwordAnterior'].valid&&changePassForm.controls['passwordAnterior'].dirty"></p-message>
+                    <p-message severity="error" text="Ingrese su contraseña anterior" 
+                        *ngIf="changePassForm.get('passwordAnterior').dirty && changePassForm.get('passwordAnterior').errors && changePassForm.get('passwordAnterior').errors.required"></p-message>
+                </div>
+                <div class="ui-grid-col-4">
+                    <p-message severity="error" text="La contraseña anterior no es correcta" 
+                    *ngIf="changePassForm.get('passwordAnterior').dirty && changePassForm.get('passwordAnterior').errors && changePassForm.get('passwordAnterior').errors.wrongOldPassword"></p-message>
                 </div>
             </div>
             <div class="ui-grid-row">
