--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -1,66 +1,94 @@
+
 <form [formGroup]="alumnoForm" (ngSubmit)="onSubmit(alumnoForm.value)">
-    <p-panel header="Alta de Alumno" >    
-            <p-steps [model]="items">
+    <p-tabView>
+       
+        <p-tabPanel header="Datos del Alumno">     
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-2">
+                            D.N.I *:
+                        </div>
+                    </div>
+                    <div class="ui-grid-row">    
+                        <div class="ui-grid-col-4">
+                                <p-inputMask mask="99.999.999" formControlName="dni" placeholder="99.999.999"></p-inputMask>
+                        </div>
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="Ingrese un D.N.I válido" 
+                                *ngIf="alumnoForm.get('dni').dirty && alumnoForm.get('dni').errors && alumnoForm.get('dni').errors.required"></p-message>
+                        </div>
+                    </div>
+                </div>   
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-2">
+                            Apellido *:
+                        </div>
+                    </div>
+                    <div class="ui-grid-row">    
+                        <div class="ui-grid-col-4">
+                                <input  type="text" style="width:100%"  pKeyFilter="alpha" formControlName="apellido" />
+                        </div>
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="Ingrese apellido del alumno" 
+                                *ngIf="alumnoForm.get('apellido').dirty && alumnoForm.get('apellido').errors && alumnoForm.get('apellido').errors.required"></p-message>
+                        </div>
+                    </div>
+
                 
+                </div>  
+            
+            
+
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-2">
+                            Nombre *:
+                        </div>
+                    </div>
+                    <div class="ui-grid-row">    
+                        <div class="ui-grid-col-4">
+                                <input  type="text" style="width:100%"  pKeyFilter="alpha" formControlName="nombre" />
+                        </div>
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="Ingrese apellido del alumno" 
+                                *ngIf="alumnoForm.get('apellido').dirty && alumnoForm.get('apellido').errors && alumnoForm.get('apellido').errors.required"></p-message>
+                        </div>
+                    </div>
+
                 
-        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-2">
-                    D.N.I *:
-                </div>
-            </div>
-            <div class="ui-grid-row">    
-                <div class="ui-grid-col-4">
-                        <p-inputMask mask="99.999.999" formControlName="dni" placeholder="99.999.999"></p-inputMask>
-                </div>
-                <div class="ui-grid-col-4">
-                    <p-message severity="error" text="Ingrese un D.N.I válido" 
-                        *ngIf="alumnoForm.get('dni').dirty && alumnoForm.get('dni').errors && alumnoForm.get('dni').errors.required"></p-message>
-                </div>
-            </div>
-        </div>   
-         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-2">
-                    Apellido *:
-                </div>
-            </div>
-            <div class="ui-grid-row">    
-                <div class="ui-grid-col-4">
-                        <input  type="text" style="width:100%"  pKeyFilter="alpha" formControlName="apellido" />
-                </div>
-                <div class="ui-grid-col-4">
-                    <p-message severity="error" text="Ingrese apellido del alumno" 
-                        *ngIf="alumnoForm.get('apellido').dirty && alumnoForm.get('apellido').errors && alumnoForm.get('apellido').errors.required"></p-message>
-                </div>
-            </div>
+                </div>  
 
-        
-        </div>  
-    </p-steps>
-    <p-steps [model]="items">
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-2">
+                            Provincia *:
+                        </div>
+                    </div>
+                    <div class="ui-grid-row">    
+                        <div class="ui-grid-col-4">
+                                <p-autoComplete formControlName="provincia" [suggestions]="filteredProvince" 
+                                    (completeMethod)="filterProvince($event)" field="name" [size]="30"
+                                    placeholder="Provincias" [minLength]="1"></p-autoComplete>
+            
+                        </div>
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="Ingrese apellido del alumno" 
+                                *ngIf="alumnoForm.get('apellido').dirty && alumnoForm.get('apellido').errors && alumnoForm.get('apellido').errors.required"></p-message>
+                        </div>
+                    </div>
 
-         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-2">
-                    Nombre *:
-                </div>
-            </div>
-            <div class="ui-grid-row">    
-                <div class="ui-grid-col-4">
-                        <input  type="text" style="width:100%"  pKeyFilter="alpha" formControlName="nombre" />
-                </div>
-                <div class="ui-grid-col-4">
-                    <p-message severity="error" text="Ingrese apellido del alumno" 
-                        *ngIf="alumnoForm.get('apellido').dirty && alumnoForm.get('apellido').errors && alumnoForm.get('apellido').errors.required"></p-message>
-                </div>
-            </div>
+                
+                </div>  
 
-        
-        </div>  
+        </p-tabPanel>        
+    
+                
 
-
+</p-tabView>                         
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid"  style="margin: 10px 0px">
+                
+
             <div class="ui-grid-row">        
 
                 <div class="ui-grid-col-4">
@@ -69,8 +97,5 @@
                 <div class="ui-grid-col-4"></div>
             </div>    
         </div>  
-    </p-steps>
-                
-    </p-panel>    
-                         
+
 </form>        
