--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -68,7 +68,7 @@
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
                                 <p-autoComplete formControlName="provincia" [suggestions]="filteredProvince" 
-                                    (completeMethod)="filterProvince($event)" field="name" [size]="30"
+                                    (completeMethod)="filterProvince($event)" field="nombre" [size]="30"
                                     placeholder="Provincias" [minLength]="1"></p-autoComplete>
             
                         </div>
