--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -67,9 +67,9 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <p-autoComplete formControlName="provincia" [suggestions]="filteredProvince" 
+                                <p-autoComplete formControlName="provincia" [suggestions]="filteredProvinces" 
                                     (completeMethod)="filterProvince($event)" field="nombre" [size]="30"
-                                    placeholder="Provincias" [minLength]="1"></p-autoComplete>
+                                    placeholder="Provincias" [minLength]="1" [dropdown]="true"></p-autoComplete>
             
                         </div>
                         <div class="ui-grid-col-4">
@@ -80,6 +80,29 @@
 
                 
                 </div>  
+
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-2">
+                            Localidad *:
+                        </div>
+                    </div>
+                    <div class="ui-grid-row">    
+                        <div class="ui-grid-col-4">
+                                <p-autoComplete formControlName="localidad" [suggestions]="filteredLocalidades" 
+                                    (completeMethod)="filterLocalidad($event)" field="nombre" [size]="30"
+                                    placeholder="Localidades" [minLength]="1" [dropdown]="true"></p-autoComplete>
+            
+                        </div>
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="Ingrese apellido del alumno" 
+                                *ngIf="alumnoForm.get('apellido').dirty && alumnoForm.get('apellido').errors && alumnoForm.get('apellido').errors.required"></p-message>
+                        </div>
+                    </div>
+
+                
+                </div>  
+                
 
         </p-tabPanel>        
     
